added tracer realisation

--- a/Tracer/Tracer.Example/Tracer.Example.csproj
+++ b/Tracer/Tracer.Example/Tracer.Example.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tracer.Core">
+      <HintPath>..\Tracer.Serialization.Abstractions\bin\Debug\net6.0\Tracer.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
