--- a/Tracer.Serialization/Tracer.Serialization/Tracer.Serialization.csproj
+++ b/Tracer.Serialization/Tracer.Serialization/Tracer.Serialization.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Tracer.Core">
       <HintPath>..\..\Tracer\Tracer.Serialization.Abstractions\bin\Debug\net6.0\Tracer.Core.dll</HintPath>
     </Reference>
