added tests for traceResults

--- a/Tracer/Tracer.Core.Tests/Tracer.Core.Tests.csproj
+++ b/Tracer/Tracer.Core.Tests/Tracer.Core.Tests.csproj
@@ -47,9 +47,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Tracer.Core">
+      <HintPath>..\Tracer.Serialization.Abstractions\bin\Debug\net6.0\Tracer.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
